--- a/src/License.Portal/License.Portal.Web/Views/Home/Privacy.cshtml
+++ b/src/License.Portal/License.Portal.Web/Views/Home/Privacy.cshtml
@@ -1,6 +1,63 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h2>@ViewData["Title"]</h2>
+﻿<h3 class="pt-3">Privacy Policy  <span class="badge badge-info">January, 2020</span></h3>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div class="row">
+    <div class="col-md-12">
+        <h4>Your Privacy</h4>
+        <p>
+            When you visit any web site, it may store or retrieve information on your browser, mostly in the form of cookies.
+            This information might be about you, your preferences or your device and is mostly used to make the site work
+            as you expect it to. The information does not usually directly identify you, but it can give you a more
+            personalised web experience.
+        </p>
+
+        <h4>What are cookies?</h4>
+        <p>
+            Cookies are pieces of data that sites and services you use or visit can set on your browser or device and they
+            can typically be read on future visits to learn more about the User and to personalize an experience, including
+            the ads that are displayed to the User. "Cookies" is also a term that may be used to refer to a range of
+            technologies that help an operator identify Users and devices, which in turn can help personalize an experience,
+            prevent fraud, store preferences, and speed up delivery of content.
+        </p>
+
+        <h4>What types of cookies does page use?</h4>
+
+        <dl class="row">
+            <dt class="col-sm-2">Policy Consent</dt>
+            <dd class="col-sm-10">
+                <strong>(.AspNet.Consent)</strong>
+                Choice question underneath your consent or privacy statement with two answer choices: Yes and No,
+                regarding to requirements for EU General Data Protection Regulation (GDPR).
+            </dd>
+            <dt class="col-sm-2">Identity</dt>
+            <dd class="col-sm-10">
+                <strong>(.AspNetCore.Identity.Application)</strong>
+                We build this website using Microsoft ASP.NET Core technology. ASP.NET Core provides cookie middleware which
+                serializes a user principal into an encrypted cookie and then, on subsequent requests, validates the cookie,
+                recreates the principal and assigns it to the User property on HttpContext.
+            </dd>
+            <dt class="col-sm-2">Antiforgery</dt>
+            <dd class="col-sm-10">
+                <strong>(.AspNetCore.Antiforgery.x)</strong>
+                Cookie to prevent Cross-Site Request Forgery attacks in ASP.NET Core. Cross-site request forgery
+                (also known as XSRF or CSRF) is an attack against web-hosted apps whereby a malicious web app can influence
+                the interaction between a client browser and a web app that trusts that browser. These attacks are possible
+                because web browsers send some types of authentication tokens automatically with every request to a website.
+                This form of exploit is also known as a one-click attack or session riding because the attack takes advantage
+                of the user's previously authenticated session.
+            </dd>
+            <dt class="col-sm-2">Temp Data</dt>
+            <dd class="col-sm-10">
+                <strong>(.AspNetCore.Mvc.CookieTempDataProvider)</strong>
+                System cookie, valid until closing the browser.
+            </dd>
+        </dl>
+
+        <h4>Personal data being processed</h4>
+        <p>Website shall collect and accumulate the following data:</p>
+        <ul>
+            <li>Username</li>
+            <li>E-mail address</li>
+            <li>Phone number</li>
+        </ul>
+    </div>
+</div>
