--- a/src/License.Portal/License.Portal.Web/Views/Shared/_Layout.cshtml
+++ b/src/License.Portal/License.Portal.Web/Views/Shared/_Layout.cshtml
@@ -1,56 +1,105 @@
-﻿<!DOCTYPE html>
-<html>
+﻿@using  License.Portal.Web.Services
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - License.Portal.Web</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+    <meta name="Description" content="ZENNER, Licensing Service Center">
+    <title>Licensing Service Center</title>
+    <link rel="icon" href="~/images/icon.png">
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="~/lib/jquery-datetimepicker/jquery.datetimepicker.css" />
+        <link href='https://fonts.googleapis.com/css?family=Lato:700' rel='stylesheet' type='text/css'>
     </environment>
     <environment exclude="Development">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/lib/jquery-datetimepicker/jquery.datetimepicker.min.css" />
+        <link href='https://fonts.googleapis.com/css?family=Lato:700' rel='stylesheet' type='text/css'>
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">License.Portal.Web</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <div class="container">
+        <header class="blog-header-logo">
+            <div class="row align-items-center">
+                <div class="col text-left">
+                    <a href="/">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="130px" height="36px" viewBox="0 0 170.1 27.8" style="enable-background:new 0 0 170.1 27.8;" xml:space="preserve">
+<style type="text/css">
+    .st01 {
+        fill: #0580B7
+    }
 
-    <partial name="_CookieConsentPartial" />
+    .st11 {
+        clip-path: url(#SVGID_21_);
+        fill: #0580B7
+    }
 
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2020 - License.Portal.Web</p>
-        </footer>
+    .st21 {
+        clip-path: url(#SVGID_41_);
+        fill: #0580B7
+    }
+</style>
+<defs>
+</defs>
+<polygon class="st01" points="74.7,0 74.7,12.5 65.8,0 56.3,0 56.3,27.8 65,27.8 65,15.3 74.7,27.8 83.6,27.8 83.6,0 "></polygon>
+<polygon class="st01" points="30.8,0 30.8,27.8 52.7,27.8 52.7,21.4 39.8,21.4 39.8,16.9 52.7,16.9 52.7,10.7 39.8,10.7 39.8,6.3   52.7,6.3 52.7,0 "></polygon>
+<polygon class="st01" points="118.2,0 118.2,27.8 140.1,27.8 140.1,21.4 127.2,21.4 127.2,16.9 140.1,16.9 140.1,10.7 127.2,10.7   127.2,6.3 140.1,6.3 140.1,0 "></polygon>
+<polygon class="st01" points="105.7,0 105.6,12.5 96.7,0 87.3,0 87.3,27.8 96,27.8 96,15.3 105.6,27.8 114.5,27.8 114.5,0 "></polygon>
+<polygon class="st01" points="0,0 0,6.3 15.6,6.4 0,20.5 0,27.8 27.3,27.8 27.3,21.4 11.5,21.3 27.3,7.1 27.3,0 "></polygon>
+<g>
+<defs>
+<rect id="SVGID_11_" width="170.1" height="27.8"></rect>
+</defs>
+<clipPath id="SVGID_21_">
+<use xlink:href="#SVGID_11_" style="overflow:visible;"></use>
+</clipPath>
+<path class="st11" d="M160.8,10.1c0,2-1.6,3.6-3.5,3.8v0h-4.8V6.3h4.8v0C159.2,6.4,160.8,8.1,160.8,10.1 M168.6,10.1   c0-5.4-4.1-9.7-9.4-10.1h-15.3v27.8h8.6v-8.5l7.2,8.5h10.5l-7.2-8.5C166.2,17.6,168.6,14.2,168.6,10.1"></path>
+</g>
+</svg>
+                    </a>
+                    <div class="col text-left tag-text">
+                        Licensing Service Center
+                    </div>
+                </div>
+            </div>
+        </header>
     </div>
-
+    <div class="container-fluid px-0 navbar-custom">
+        <div class="container">
+            <nav class="container navbar navbar-expand-lg navbar-dark p-1">
+                <a asp-controller="Home" asp-action="Index" class="navbar-brand">
+                    <svg style="width:24px;height:24px;margin-bottom:3px;"><path fill="#8A8E92" d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" /></svg>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse text-right" id="navbarNav">
+                    <ul class="navbar-nav mr-auto">                       
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item"><a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="Index">ADMIN</a></li>
+                        }
+                    </ul>
+                    <partial name="_LoginPartial" />
+                </div>
+            </nav>
+        </div>
+    </div>
+    <div class="container p-3">
+        @RenderBody()
+    </div>    
+    <partial name="_CookieConsentPartial" />
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/lib/jquery-datetimepicker/jquery.datetimepicker.js" type="text/javascript"></script>
+        <script src="~/lib/moment.js/moment.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
@@ -60,15 +109,14 @@
                 crossorigin="anonymous"
                 integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
         </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"
                 asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd">
+                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
         </script>
+        <script src="~/lib/jquery-datetimepicker/jquery.datetimepicker.min.js" type="text/javascript"></script>
+        <script src="~/lib/moment.js/moment.min.js"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
-
     @RenderSection("Scripts", required: false)
 </body>
 </html>
