--- a/src/License.Portal/License.Portal.Web/wwwroot/css/site.css
+++ b/src/License.Portal/License.Portal.Web/wwwroot/css/site.css
@@ -19,8 +19,8 @@ h2, h3 {
     bottom: 0;
     font-family: Lato, Helvetica;
     font-style: italic;
-    font-size: 20px;
-    color: #152f4f;
+    font-size: 16px;
+    color: #ababab;
     text-decoration: none !important;
     cursor: default;
 }
