--- a/src/License.Portal/License.Portal.Web/Views/Home/Index.cshtml
+++ b/src/License.Portal/License.Portal.Web/Views/Home/Index.cshtml
@@ -1,1 +1,24 @@
-﻿
+﻿<div class="row">
+    <div class="col-sm-6">
+        <div class="card text-white bg-primary mb-3">
+            <div class="card-body">
+                <h5 class="card-title font-italic">IOT-RADIO</h5>
+                <p class="card-text">
+                    One of the most useful wireless protocols for smart metering to emerge in recent years is
+                    <strong>Wireless M-Bus</strong>, which is widely used for metering applications across Europe.
+                    We are proud to introduce the <strong>IOT-RADIO</strong>, a mobile app solutions that make it possible to collect the radio data in your area.
+                </p>
+                <a href="https://play.google.com/store/apps/details?id=com.zenner.reader" class="btn btn-light">Try it</a>
+            </div>
+        </div>
+    </div>
+    @*<div class="col-sm-6">
+        <div class="card text-white bg-primary mb-3">
+            <div class="card-body">
+                <h5 class="card-title font-italic">IOT-CONFIG</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-light">Go somewhere</a>
+            </div>
+        </div>
+    </div>*@
+</div>
